# test_grpc

./: CMakeLists.txt  README.md  client.cpp  client.py  install  server.cpp  server.py  test.py
installation_grpc/: install.sh
proto_files/: command_protoc.sh  myproto.grpc.pb.cc  myproto.grpc.pb.h  myproto.pb.cc  myproto.pb.h  myproto.proto  myproto_pb2.py  myproto_pb2_grpc.py
version_grpc/: CMakeLists.txt  version_grpc.cpp
